tests/integration/snapshots/integration__conformance__n_number_1_000.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[1 000.0]
stderr ---
error: unexpected leading zero
 --> stdin:1:4
  |
1 | [1 000.0]
  |    -^^
  |    |
  |    first zero found here
  |
help: remove the leading zeros
  |
1 - [1 000.0]
1 + [1 0.0]
  |
